# UWB-Tag-Kw4

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FLASHING_GUIDE.txt  Kconfig  PIN_CONFIGURATION_STATUS.md  build.ps1  capture_rtt.ps1  debug_gdb.ps1  flash_cmd.jlink  flash_dongle_jlink.ps1  prj.conf  quick_rtt.ps1  reset_run.jlink  rtt_captured.txt  rtt_live2.txt  rtt_manual_check.jlink  rtt_new.txt  rtt_quick.txt  rtt_test.txt  run_with_logs.jlink  start_running.jlink
.github/: copilot-instructions.md
boards/: nrf52833dk_nrf52833.overlay  nrf52833dongle.overlay
build_dongle/: .ninja_log  build.ninja  build_info.yml  domains.yaml  uwb-tag-firmware_sysbuild_cache.txt  zephyr_settings.txt
build_dongle/Kconfig/: Kconfig.modules
build_dongle/Kconfig/arch/: Kconfig
build_dongle/Kconfig/soc/: Kconfig
build_dongle/_sysbuild/: autoconf.h
build_dongle/uwb-tag-firmware/: .ninja_deps  .ninja_log  build.ninja  build_info.yml.bak  compile_commands.json  zephyr_modules.txt
build_dongle/uwb-tag-firmware/Kconfig/: Kconfig.dts  Kconfig.sysbuild.modules
build_dongle/uwb-tag-firmware/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nrf52833dongle  Kconfig.sysbuild
build_dongle/uwb-tag-firmware/Kconfig/soc/: Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
dts/bindings/: decawave,dw3000.yaml  qorvo,dw3110.yaml  qorvo,dw3210.yaml
dw3_qm33_ref/: README.md
dw3_qm33_ref/Libs/dwt_uwb_driver/: README.md
dw3_qm33_ref/Libs/dwt_uwb_driver/docs/: Doxyfile  Makefile  conf.py
dw3_qm33_ref/Libs/dwt_uwb_driver/docs/sphinx/: plantuml.cfg  qorvo.sty  requirements.txt
dw3_qm33_ref/Libs/niq/Inc/: niq.h
dw3_qm33_ref/Libs/uwb-stack/config_manager/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/config_manager/data/l1_config/: l1_config.yml
dw3_qm33_ref/Libs/uwb-stack/config_manager/plugins/l1_config/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/config_manager/plugins/l1_config/src/: l1_config.c
dw3_qm33_ref/Libs/uwb-stack/config_manager/plugins/mac_config/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/libs/qhal/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/libs/qmath/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/libs/qosal/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/libs/qplatform/: CMakeLists.txt
dw3_qm33_ref/Libs/uwb-stack/tools/cmake/: helpers.cmake
dw3_qm33_ref/Projects/Common/scripts/: CreateTargetCommon.py
dw3_qm33_ref/Projects/FreeRTOS/CLI/Common/: main.c
dw3_qm33_ref/Projects/FreeRTOS/CLI/DWM3001CDK/: CreateTarget.py  project_CLI.cmake
dw3_qm33_ref/Projects/FreeRTOS/CLI/Type2AB_EVB/: CreateTarget.py  project_CLI.cmake
dw3_qm33_ref/Projects/FreeRTOS/CLI/Type2AB_EVB/ProjectDefinition/: CMakeLists.txt  uwb_stack_llhw.cmake
dw3_qm33_ref/Projects/FreeRTOS/CLI/nRF52840DK/: CMakeLists.txt  CreateTarget.py  nRF52840.ld  project_CLI.cmake
dw3_qm33_ref/Projects/FreeRTOS/HelloWorld/: README.md
dw3_qm33_ref/Projects/FreeRTOS/HelloWorld/DWM3001CDK/: CreateTarget.py  isr_hs.c  nRF52833.ld  project_HelloWorld.cmake
dw3_qm33_ref/Projects/FreeRTOS/HelloWorld/nRF52840DK/: CreateTarget.py  nRF52840.ld  project_HelloWorld.cmake
dw3_qm33_ref/Projects/FreeRTOS/QANI/: README.md
dw3_qm33_ref/Projects/FreeRTOS/QANI/DWM3001CDK/: CreateTarget.py  nRF52833.ld  (+1 more)
dw3_qm33_ref/SDK_BSP/Nordic/: CMakeLists.txt
dw3_qm33_ref/SDK_BSP/Nordic/custom/: check_config.h  config.h  nrf_crypto_rng.c  nrf_sdh_soc.c
dw3_qm33_ref/Src/AppConfig/: CMakeLists.txt
dw3_qm33_ref/Src/AppConfig/Inc/: appConfig.h  default_config.h
dw3_qm33_ref/Src/AppConfig/Src/: config.c
dw3_qm33_ref/Src/Apps/Inc/: driver_app_config.h
dw3_qm33_ref/Src/Apps/Src/common/: CMakeLists.txt
dw3_qm33_ref/Src/Apps/Src/common/app/common/: app.c  app.h
dw3_qm33_ref/Src/Apps/Src/common/cmd/: cmd.c  cmd.h  cmd_dw3000.c
dw3_qm33_ref/Src/Apps/Src/common/controlTask/: controlTask.c  controlTask.h
dw3_qm33_ref/Src/Apps/Src/common/usb_uart/: usb_uart_rx.c  usb_uart_rx.h  usb_uart_tx.c
dw3_qm33_ref/Src/Apps/Src/fira/: CMakeLists.txt  common_fira.c  common_fira.h  fira_app.c  fira_dw3000.c  fira_fn.c
dw3_qm33_ref/Src/Apps/Src/fira/Inc/: fira_app.h  fira_app_config.h
dw3_qm33_ref/Src/Apps/Src/reporter/: CMakeLists.txt
dw3_qm33_ref/Src/Boards/Inc/: thisBoard.h
dw3_qm33_ref/Src/Boards/Src/Type2AB_EVB/: CMakeLists.txt
dw3_qm33_ref/Src/Boards/Src/Type2AB_EVB/Common/: type2ab.h
dw3_qm33_ref/Src/Boards/Src/Type2AB_EVB/FreeRTOS/: Type2AB_EVB.c
dw3_qm33_ref/Src/Comm/: CMakeLists.txt
dw3_qm33_ref/Src/Comm/Inc/: comm_helpers.h
dw3_qm33_ref/Src/Comm/Src/BLE/: CMakeLists.txt  app_ble.h
dw3_qm33_ref/Src/Comm/Src/BLE/niq/: ble_niq.c
dw3_qm33_ref/Src/Comm/Src/BLE/nrfx/: ble.c
dw3_qm33_ref/Src/Comm/Src/BLE/nrfx/anis/: ble_anis.c  ble_anis.h
dw3_qm33_ref/Src/Comm/Src/BLE/nrfx/qnis/: ble_qnis.c  ble_qnis.h
dw3_qm33_ref/Src/Comm/Src/BLE/nrfx/softdevice/: CMakeLists.txt  s113_nrf52_7.2.0_softdevice.c
dw3_qm33_ref/Src/EventManager/: CMakeLists.txt
dw3_qm33_ref/Src/HAL/Inc/: HAL_cpu.h  HAL_crypto.h  HAL_uart.h  HAL_usb.h
dw3_qm33_ref/Src/HAL/Src/nrfx/: CMakeLists.txt  HAL_cpu.c  HAL_crypto.c  HAL_uart.c  HAL_usb.c
dw3_qm33_ref/Src/Helpers/: CMakeLists.txt  circular_buffer.c  deca_dbg.c  uwb_convert.c
dw3_qm33_ref/Src/Helpers/Inc/: circular_buffer.h  rtls_version.h  uwb_convert.h
dw3_qm33_ref/Src/Logger/: CMakeLists.txt  log_processing.c  log_processing.h
dw3_qm33_ref/Src/OS/FreeRTOS/: CMakeLists.txt
dw3_qm33_ref/Src/UWB/: CMakeLists.txt  mcps_crypto.c  uwb_utils.c
dw3_qm33_ref/Src/UWB/Inc/: uwb_frames.h  uwb_utils.h
src/: main.c  pin_test.c  pin_test.h  uwb_driver.c
src/platform/: deca_mutex.c  deca_sleep.c  deca_spi.c  deca_spi.h  port.c  port.h
uwb-tag-firmware/: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
uwb-tag-firmware/boards/: nrf52833dk_nrf52833.dts  nrf52833dk_nrf52833.overlay
uwb-tag-firmware/boards/arm/nrf52833dongle_nrf52833/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf52833dongle_nrf52833-pinctrl.dtsi  nrf52833dongle_nrf52833.dts  nrf52833dongle_nrf52833.yaml  nrf52833dongle_nrf52833_defconfig
uwb-tag-firmware/src/: main.c
(+119 files in other folders)
